--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@100;200;300;400&family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/eb1941a04b.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesia Shevshuk</title>
@@ -33,7 +37,7 @@
   <body>
     <div class="d-flex bg-warning">
       <h1>Hello World</h1>
-      <p>Hi, there</p>
+      <p>Hi, there <i class="fa-brands fa-instagram"></i></p>
     </div>
   </body>
 </html>
