Added the Hero, made the button bold

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
   </head>
   <body>
     <div class="hero">
-      <p>👋 Hello, I am</p>
+      <p>👋 Hello, I'm</p>
       <h1>Lesia Shevchuk</h1>
       <h2>Front-end developer from Ukraine, temporary based in the USA</h2>
-      <a href="#" class="btn btn-primary btn-branding">Contact me</a>
+      <a href="#" class="btn btn-primary btn-branding font-weight-bold">
+        <b> Contact me </b></a
+      >
     </div>
   </body>
 </html>
