Integrated homepage design

--- a/index.html
+++ b/index.html
@@ -42,9 +42,65 @@
       <p>👋 Hello, I'm</p>
       <h1>Lesia Shevchuk</h1>
       <h2>Front-end developer from Ukraine, temporary based in the USA</h2>
-      <a href="#" class="btn btn-primary btn-branding font-weight-bold">
-        <b> Contact me </b></a
-      >
+      <div>
+        <a href="#" class="btn btn-primary btn-branding"> Contact me </a>
+      </div>
+    </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/ABC.jpeg" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">ABC Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather-App Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.jpeg" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/croissant.jpeg" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Croissant Project</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
