--- a/work.html
+++ b/work.html
@@ -39,24 +39,45 @@
   </head>
   <body>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-5">Hi, I am Lesia Shevchuk</h1>
-            <h2 class="mb-5">
-              Front-end developer from Ukraine, temporary based in the USA
-            </h2>
-            <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img src="images/ABC.jpeg" class="img-fluid mb-3 rounded" alt="" />
+            <h3 class="text-center m-0">ABC Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/weather.jpeg"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Weather Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JavaScript
             </p>
-            <a href="#" class="btn btn-branding">See my projects</a>
           </div>
         </div>
-        <div class="col-lg-6">
-          <img src="images/me.jpeg" class="img-fluid" alt="" />
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/dictionary-app.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Dictionary App</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and React</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/Translation-app.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and React</p>
+          </div>
         </div>
       </div>
     </div>
