--- a/index.html
+++ b/index.html
@@ -127,6 +127,35 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let’s work together and i’ll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:0504lesia@gmail.com" class="email-link"
+            >0504lesia@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://github.com/Lesia-Sh" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.facebook.com/lesia.shv" target="_blank">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
