--- a/about.html
+++ b/about.html
@@ -38,6 +38,36 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Lesia Shevchuk's logo"
+          />
+          <img
+            src="images/small-logo.jpeg"
+            class="logo d-block d-md-none"
+            alt="Lesia Shevchuk's small logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Lesia page">About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Lesia's work page">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Lesia's contact page">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -56,7 +86,11 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/me.jpeg" class="img-fluid" alt="" />
+          <img
+            src="images/me.jpeg"
+            class="img-fluid"
+            alt="Lesia Shevchuk's photo"
+          />
         </div>
       </div>
     </div>
