--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesia Shevshuk</title>
+    <meta
+      name="description"
+      content="Lesia Shevchuk is front-end developer from Ukraine, temporary based in the USA"
+    />
+    <title>Front-end developer - Lesia Shevshuk</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -40,26 +44,30 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Lesia Shevchuk's logo"
+          />
           <img
             src="images/small-logo.jpeg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Lesia Shevchuk's small logo"
           />
         </a>
         <ul>
           <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About Lesia page">About</a>
           </li>
           <li>
-            <a href="/work.html">Work</a>
+            <a href="/work.html" title="Lesia's work page">Work</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="Lesia's contact page">Contact</a>
           </li>
         </ul>
       </nav>
@@ -69,7 +77,13 @@
       <h1>Lesia Shevchuk</h1>
       <h2>Front-end developer from Ukraine, temporary based in the USA</h2>
       <div>
-        <a href="#" class="btn btn-primary btn-branding"> Contact me </a>
+        <a
+          href="/contact.html"
+          class="btn btn-primary btn-branding"
+          title="Contact me"
+        >
+          Contact me
+        </a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -78,7 +92,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/ABC.jpeg" class="img-fluid" alt="" />
+          <img
+            src="images/ABC.jpeg"
+            class="img-fluid"
+            alt="ABC Project picture"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -89,7 +107,7 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -103,16 +121,29 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a
+              href="https://symphonious-panda-199a67.netlify.app/"
+              target="_blank"
+              class="btn btn-branding-outline"
+              >Learn more</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.jpeg" class="img-fluid" alt="" />
+          <img
+            src="images/weather.jpeg"
+            class="img-fluid"
+            alt="Weather Project Picture"
+          />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/croissant.jpeg" class="img-fluid" alt="" />
+          <img
+            src="images/croissant.jpeg"
+            class="img-fluid"
+            alt="Croissant Project Picture"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -123,20 +154,24 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a
+              href="https://bespoke-mandazi-3ded63.netlify.app/"
+              class="btn btn-branding-outline"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
-      <footer>
+      <footer class="container">
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">
               Let’s work together and i’ll help you by all my best
             </p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding mt-3">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
