--- a/work.html
+++ b/work.html
@@ -38,12 +38,46 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Lesia Shevchuk's logo"
+          />
+          <img
+            src="images/small-logo.jpeg"
+            class="logo d-block d-md-none"
+            alt="Lesia Shevchuk's small logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Lesia page">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Lesia's work page">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Lesia's contact page">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/ABC.jpeg" class="img-fluid mb-3 rounded" alt="" />
+            <img
+              src="images/ABC.jpeg"
+              class="img-fluid mb-3 rounded"
+              alt="ABC Project Picture"
+            />
             <h3 class="text-center m-0">ABC Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
@@ -51,7 +85,7 @@
             <img
               src="images/weather.jpeg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Weather Project Picture"
             />
             <h3 class="text-center m-0">Weather Project</h3>
             <p class="text-center text-muted">
@@ -64,7 +98,7 @@
             <img
               src="images/dictionary-app.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Dictionary Project Picture"
             />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
@@ -73,7 +107,7 @@
             <img
               src="images/Translation-app.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Translation Project Picture"
             />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
