Made the website SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesia Shevshuk</title>
+    <title>Contact Lesia Shevshuk</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -73,17 +73,82 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:0504lesia@gmail.com">0504lesia@gmail.com</a>
+          <a href="mailto:0504lesia@gmail.com" title="email link"
+            >0504lesia@gmail.com</a
+          >
         </p>
         <h3>Twitter</h3>
         <p>
-          <a href="http:www.twitter.com/lesia.shvch">@lesia.shvch</a>
+          <a href="http:www.github.com/Lesia-Sh" title="Github Profile"
+            >@lesia.shvch</a
+          >
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="http:www.instagram.com/lesia.shvch">@lesia.codes</a>
+          <a href="https://www.facebook.com/lesia.shv" title="Facebook Profile"
+            >@lesia.codes</a
+          >
         </p>
       </div>
+      <footer class="container">
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">
+              Let’s work together and i’ll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Lesia Shevchuk Contacts"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:0504lesia@gmail.com"
+            class="email-link"
+            title="Lesia Shevchuk Mail"
+            >0504lesia@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/edsoulart/"
+            title="Lesia Shevchuk instagram"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://github.com/Lesia-Sh"
+            target="_blank"
+            title="Lesia Shevchuk Github"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/lesia.shv"
+            target="_blank"
+            title="Lesia Shevchuk Facebook"
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <p class="text-center mt-5">
+          ✌ This project was coded by
+          <a href="/about.html" title="About Lesia Shevchuk">Lesia Shevchuk</a>
+          during the study at SheCodes and is
+          <a
+            href="https://github.com/Lesia-Sh/Portfolio-project"
+            title="Lesia Shevchuk Github Page"
+            >open-sourse</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
