--- a/work.html
+++ b/work.html
@@ -114,6 +114,65 @@
           </div>
         </div>
       </div>
+      <footer class="container">
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">
+              Let’s work together and i’ll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Lesia Shevchuk Contacts"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:0504lesia@gmail.com"
+            class="email-link"
+            title="Lesia Shevchuk Mail"
+            >0504lesia@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/edsoulart/"
+            title="Lesia Shevchuk instagram"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://github.com/Lesia-Sh"
+            target="_blank"
+            title="Lesia Shevchuk Github"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/lesia.shv"
+            target="_blank"
+            title="Lesia Shevchuk Facebook"
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <p class="text-center mt-5">
+          ✌ This project was coded by
+          <a href="/about.html" title="About Lesia Shevchuk">Lesia Shevchuk</a>
+          during the study at SheCodes and is
+          <a
+            href="https://github.com/Lesia-Sh/Portfolio-project"
+            title="Lesia Shevchuk Github Page"
+            >open-sourse</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
