--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a
           href="/contact.html"
           class="btn btn-primary btn-branding"
-          title="Contact me"
+          title="Contact Lesia Shevchuk"
         >
           Contact me
         </a>
@@ -107,7 +107,12 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="Work Page"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -125,6 +130,7 @@
               href="https://symphonious-panda-199a67.netlify.app/"
               target="_blank"
               class="btn btn-branding-outline"
+              title="Live Weather Project"
               >Learn more</a
             >
           </div>
@@ -157,6 +163,7 @@
             <a
               href="https://bespoke-mandazi-3ded63.netlify.app/"
               class="btn btn-branding-outline"
+              title="Sweet Project"
               >Learn more</a
             >
           </div>
@@ -171,25 +178,55 @@
             </p>
           </div>
           <div>
-            <a href="/contact.html" class="btn btn-branding mt-3">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Lesia Shevchuk Contacts"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:0504lesia@gmail.com" class="email-link"
+          <a
+            href="mailto:0504lesia@gmail.com"
+            class="email-link"
+            title="Lesia Shevchuk Mail"
             >0504lesia@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="" target="_blank">
+          <a
+            href="https://www.instagram.com/edsoulart/"
+            title="Lesia Shevchuk instagram"
+            target="_blank"
+          >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/Lesia-Sh" target="_blank">
+          <a
+            href="https://github.com/Lesia-Sh"
+            target="_blank"
+            title="Lesia Shevchuk Github"
+          >
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="https://www.facebook.com/lesia.shv" target="_blank">
+          <a
+            href="https://www.facebook.com/lesia.shv"
+            target="_blank"
+            title="Lesia Shevchuk Facebook"
+          >
             <i class="fa-brands fa-facebook"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          ✌ This project was coded by
+          <a href="/about.html" title="About Lesia Shevchuk">Lesia Shevchuk</a>
+          during the study at SheCodes and is
+          <a
+            href="https://github.com/Lesia-Sh/Portfolio-project"
+            title="Lesia Shevchuk Github Page"
+            >open-sourse</a
+          >
+        </p>
       </footer>
     </div>
   </body>
