--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         </p>
         <h3>Twitter</h3>
         <p>
-          <a href="http:www.github.com/Lesia-Sh" title="Github Profile"
+          <a href="http://www.github.com/Lesia-Sh" title="Github Profile"
             >@lesia.shvch</a
           >
         </p>
