Changed pictures and links added background color,  descriptions

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesia Shevshuk</title>
+    <title>You can read about Lesia Shevshuk here</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -42,7 +42,7 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/logo.jpeg"
             class="logo d-none d-md-block"
             alt="Lesia Shevchuk's logo"
           />
@@ -77,10 +77,15 @@
               Front-end developer from Ukraine, temporary based in the USA
             </h2>
             <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              This summer I'm becoming a new exciting hobby, hope main job in
+              future: frontend developer. This is a great opportunity for me,
+              thanks SheCodes! Now I'm working in the field of the integrative
+              cognitive-behavior psychology, psychology of emotions, conflict
+              studies, including Mental resources of happiness, Emotional
+              health, Overcoming conflict relationships in communication, The
+              development of self-confidence in life and reduce anxiety,
+              Training of personal growth, Time Management for Beginners and
+              others.
             </p>
             <a href="/work.html" class="btn btn-branding" title="Project Page"
               >See my projects</a
