--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/logo.jpeg"
             class="logo d-none d-md-block"
             alt="Lesia Shevchuk's logo"
           />
@@ -77,16 +77,22 @@
             >0504lesia@gmail.com</a
           >
         </p>
-        <h3>Twitter</h3>
+        <h3>Github</h3>
         <p>
-          <a href="http://www.github.com/Lesia-Sh" title="Github Profile"
-            >@lesia.shvch</a
+          <a
+            href="http://www.github.com/Lesia-Sh"
+            target="_blank"
+            title="Github Profile"
+            >Lesia-Sh</a
           >
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.facebook.com/lesia.shv" title="Facebook Profile"
-            >@lesia.codes</a
+          <a
+            href="https://www.instagram.com/edsoulart/"
+            target="_blank"
+            title="Instagram Profile"
+            >@edsoulart</a
           >
         </p>
       </div>
