--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/logo.jpeg"
             class="logo d-none d-md-block"
             alt="Lesia Shevchuk's logo"
           />
@@ -73,9 +73,11 @@
       </nav>
     </div>
     <div class="hero">
-      <p>👋 Hello, I'm</p>
+      <p class="star"><span class="star">✴</span> Hello, I'm</p>
       <h1>Lesia Shevchuk</h1>
-      <h2>Front-end developer from Ukraine, temporary based in the USA</h2>
+      <h2 class="star">
+        Front-end developer from Ukraine, temporary based in the USA
+      </h2>
       <div>
         <a
           href="/contact.html"
@@ -93,7 +95,7 @@
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/ABC.jpeg"
+            src="images/ABC-app.jpeg"
             class="img-fluid"
             alt="ABC Project picture"
           />
@@ -102,13 +104,14 @@
           <div class="project-description">
             <h2 class="mb-5">ABC Project</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              The ABC-App was my first coding project. I started doing it after
+              3 weeks of study at SheCodes school. Now I see a lot of places to
+              improve and I did some, but I need to have this project in such
+              code to compare in future my growing.
             </p>
             <a
-              href="/work.html"
+              href="https://gregarious-salamander-de47ab.netlify.app/"
+              target="_blank"
               class="btn btn-branding-outline"
               title="Work Page"
               >Learn more</a
@@ -121,10 +124,11 @@
           <div class="project-description">
             <h2 class="mb-5">Weather-App Project</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              The Weather-App was the result of the second part of 8 weeks (+3
+              weeks) study at SheCodes School. It was a very difficult but
+              amusing experience, I enjoined it a lot, especially the result. I
+              could do the Weather App in metric and imperial systems, I
+              discover the phenomenon of API and it is great!
             </p>
             <a
               href="https://symphonious-panda-199a67.netlify.app/"
@@ -137,7 +141,7 @@
         </div>
         <div class="col d-none d-lg-block">
           <img
-            src="images/weather.jpeg"
+            src="images/weather-app.jpeg"
             class="img-fluid"
             alt="Weather Project Picture"
           />
@@ -146,22 +150,23 @@
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/croissant.jpeg"
+            src="images/cake-app.jpeg"
             class="img-fluid"
             alt="Croissant Project Picture"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Croissant Project</h2>
+            <h2 class="mb-5">Cake Project</h2>
             <p class="mb-5 text-muted">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
-              omnis quam vel eos eveniet alias temporibus deserunt veritatis
-              minima fugiat explicabo eum dolore.
+              The Cake-App was made for my dear daughter Katherine, she has a
+              very sweet hobby and job: cake baker. It was very interesting for
+              me to code. I have a lot of fun doing it, especially whet I tested
+              how it will look like on small devices.
             </p>
             <a
-              href="https://bespoke-mandazi-3ded63.netlify.app/"
+              href="https://imaginative-florentine-1f1d43.netlify.app/"
+              target="_blank"
               class="btn btn-branding-outline"
               title="Sweet Project"
               >Learn more</a
