--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesia Shevshuk</title>
+    <title>You can see Lesia Shevshuk's projects</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -42,7 +42,7 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/logo.jpeg"
             class="logo d-none d-md-block"
             alt="Lesia Shevchuk's logo"
           />
@@ -74,7 +74,7 @@
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
-              src="images/ABC.jpeg"
+              src="images/ABC-app.jpeg"
               class="img-fluid mb-3 rounded"
               alt="ABC Project Picture"
             />
@@ -83,7 +83,7 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/weather.jpeg"
+              src="images/weather-app.jpeg"
               class="img-fluid mb-3 rounded"
               alt="Weather Project Picture"
             />
