--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p class="mb-5 text-muted">
               The Cake-App was made for my dear daughter Katherine, she has a
               very sweet hobby and job: cake baker. It was very interesting for
-              me to code. I have a lot of fun doing it, especially whet I tested
+              me to code. I have a lot of fun doing it, especially when I tested
               how it will look like on small devices.
             </p>
             <a
